sas-core/main/default/objects/VoiceCall_Prompt__c/VoiceCall_Prompt__c.object-meta.xml
<CustomObject>
    <label>Voice Call Prompt</label>
    <nameField>
        <label>Voice Call Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voice Call Prompts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>