sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Add_Pet_Deflect__c.field-meta.xml
<CustomField>
    <fullName>Add_Pet_Deflect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add Pet Deflect</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>