sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Baggage_Deflect_Option1__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Deflect_Option1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Baggage Deflect Option1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>