sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Callback_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Callback_Confirmation__c</fullName>
    <label>Callback Confirmation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>