sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Callback_Question__c.field-meta.xml
<CustomField>
    <fullName>Callback_Question__c</fullName>
    <label>Callback Question</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>