sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Change_Booking_Deflect__c.field-meta.xml
<CustomField>
    <fullName>Change_Booking_Deflect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Booking Deflect</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>