sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Claims_Status_Deflect__c.field-meta.xml
<CustomField>
    <fullName>Claims_Status_Deflect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claims Status Deflect</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>