sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Closed_B2C__c.field-meta.xml
<CustomField>
    <fullName>Closed_B2C__c</fullName>
    <label>Closed B2C</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>