sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Deflect_Main_Menu__c.field-meta.xml
<CustomField>
    <fullName>Deflect_Main_Menu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deflect Main Menu</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>