sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>