sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Eurobonus__c.field-meta.xml
<CustomField>
    <fullName>Eurobonus__c</fullName>
    <label>Eurobonus</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>