sas-core/main/default/objects/VoiceCall_Prompt__c/fields/GDPR__c.field-meta.xml
<CustomField>
    <fullName>GDPR__c</fullName>
    <label>GDPR</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>