sas-core/main/default/objects/VoiceCall_Prompt__c/fields/IATA__c.field-meta.xml
<CustomField>
    <fullName>IATA__c</fullName>
    <label>IATA</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>