sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>