sas-core/main/default/objects/VoiceCall_Prompt__c/fields/No_Options_Selected__c.field-meta.xml
<CustomField>
    <fullName>No_Options_Selected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Options Selected</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>