sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Pet_SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>Pet_SMS_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pet SMS Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>