sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Queue_Position_EWT__c.field-meta.xml
<CustomField>
    <fullName>Queue_Position_EWT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Position EWT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>