sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Queue_Position_Next_On_Call__c.field-meta.xml
<CustomField>
    <fullName>Queue_Position_Next_On_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Position Next On Call</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>