sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Recording_Consent__c.field-meta.xml
<CustomField>
    <fullName>Recording_Consent__c</fullName>
    <label>Recording Consent</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>