sas-core/main/default/objects/VoiceCall_Prompt__c/fields/SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>