sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Waiting1__c.field-meta.xml
<CustomField>
    <fullName>Waiting1__c</fullName>
    <label>Waiting 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>