sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Waiting2__c.field-meta.xml
<CustomField>
    <fullName>Waiting2__c</fullName>
    <label>Waiting 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>