sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Waiting_AgentHelpdesk__c.field-meta.xml
<CustomField>
    <fullName>Waiting_AgentHelpdesk__c</fullName>
    <label>Waiting Agent Helpdesk</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>