sas-core/main/default/objects/VoiceCall_Prompt__c/fields/WaitingMinutes__c.field-meta.xml
<CustomField>
    <fullName>WaitingMinutes__c</fullName>
    <label>Waiting Minutes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>