sas-core/main/default/objects/VoiceCall_Prompt__c/fields/WaitingTime__c.field-meta.xml
<CustomField>
    <fullName>WaitingTime__c</fullName>
    <label>Waiting Time</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>