sas-core/main/default/objects/VoiceCall_Prompt__c/fields/Welcome__c.field-meta.xml
<CustomField>
    <fullName>Welcome__c</fullName>
    <label>Welcome</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>